--- a/themes/thomasbarham/theme.css
+++ b/themes/thomasbarham/theme.css
@@ -40,7 +40,7 @@ h5,
 h6 {
 	font-family: 'ArialBlackRegular', Gadget, sans-serif;
 	font-weight: normal;
-	color:#bfc1cb;
+	color:#fff;
 }
 
 .post h2,
@@ -52,21 +52,21 @@ h6 {
 }
 
 a:link {
-	color: #bfc1cb;
+	color: #fff;
 	text-decoration:none;
 }
 a:visited {
-	color: #bfc1cb;
+	color: #fff;
 }
 a:hover,a:active {
-	color: #191c2b;
+	color: #ddd;
 }
 
 p {
-	font-size: 20px;
-	text-align:center;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 16px;
+	margin:12px 0;
 	color:#fff;
-	margin-top: 200px;
 }
 
 
@@ -94,6 +94,13 @@ body {
 	background: #000312;
 	color: #fff;
 	padding: 0;
+	background: url(images/bg.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='.bg.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='bg.jpg', sizingMethod='scale')";
 }
 
 #main {
@@ -106,12 +113,15 @@ body {
 .container {
 	color:#000;
 	padding:0;
-	width:100%;
+	max-width:1140px;
+	margin:0 auto;
 
 }
 	#header .container {
-		padding-top: 80px;
-		padding-bottom: 40px;
+		padding-top: 5px;
+		padding-bottom: 190px;
+		max-width:1140px;
+		margin: 0 auto;
 	}
 			#logo,
 			#tagline {
@@ -131,9 +141,9 @@ body {
 				padding: 0;
 			}
 	#nav-primary {
-		clear: both;
 		width: 100%;
-		padding: 0 10px;
+		position: absolute;
+		z-index: 1004;
 	}
 		#nav-primary ul,
 		#nav-primary li {
@@ -142,17 +152,21 @@ body {
 			#nav-primary a {
 				float: left;
 				display: block;
-				padding: 0 10px;
+				font-size:45px;
+				letter-spacing:-3px;
+				line-height: 40px;
 			}
 	#widget-header {
 		clear: both;
 	}
 	
 	#content {
-		max-width:1140px;
-		margin:0 auto;
-		padding:15px;
+		max-width: 1140px;
+		margin: 0 auto;
 	}
+
+	article { width:50%; margin-left:38px;}
+
 
 	#footer, .push {
 		height: 128px; /* .push must be the same height as .footer */
@@ -192,6 +206,108 @@ body {
 				#nav-footer {
 					margin-top: -35px;
 				}
+
+
+
+/*************************
+Global Styles
+*************************/
+
+.alignleft { float:left; margin: 20px 20px 20px 0;}
+
+.alignright { float:right; margin: 20px 0 20px 20px;}
+
+/*************************
+Carousels
+*************************/
+
+/* MAIN CAROUSEL */
+
+.touchcarousel .arrow-icon {
+	top: 60%;
+}
+
+.touchcarousel {
+	width: 100%;
+	height:100%;
+	margin: 0;
+	overflow:hidden !important;
+}		
+.touchcarousel .touchcarousel-item {		
+	width: 293px;
+	height:293px;
+	overflow:hidden;
+	background:#000;
+}
+
+.touchcarousel .touchcarousel-item .vimeo_thumb {
+	height: 293px;
+	margin-left: -46px;
+}
+
+.carousel_container h3 { margin-bottom: 20px; }
+
+.carousel_container p { text-align:right;}
+
+/* SUB CAROUSEL */
+
+#subcarousel_container {
+
+}
+
+#subcarousel {
+	max-width:1140px;
+	margin: 0 auto;
+}	
+#subcarousel .arrow-holder {
+	height: 200px;
+}		
+#subcarousel .touchcarousel-item {	
+	height: 200px;		
+}
+#subcarousel .item-block {
+	width: 300px;
+	height: 200px;
+	display: block;
+}
+#subcarousel .item-block img,
+#subcarousel .item-block h4, 
+#subcarousel .item-block p {
+	float: left;
+	position: relative;
+	display: block;
+	margin: 0;			
+}
+#subcarousel .item-block img {
+	max-width: 412px;		
+	border: 0;
+	padding: 0;		
+}
+#subcarousel .item-block {			
+	text-decoration: none;
+	color: inherit;			
+}					
+#subcarousel .item-block h4 {
+	font: bold 13px/20px Helvetica, Arial, sans-serif;
+	color: #BFC1CB;
+	width: 300px;
+	height: auto;		
+	padding: 2px 0 0 0px;
+	text-align:center;
+	-webkit-transition: color 0.2s ease-out; 
+	-moz-transition: color 0.2s ease-out;
+	transition: color 0.2s ease-out;  	
+}
+#subcarousel .item-block:hover h4 {	
+	color: #1873c9;		
+}
+#subcarousel .item-block p {			
+	font: normal 13px/20px Helvetica, Arial, sans-serif;
+	color: #555;
+	padding: 0;
+	text-align:center;
+}
+
 
 /*************************
 Vimeo Player
