--- a/themes/thomasbarham/touchcarousel.css
+++ b/themes/thomasbarham/touchcarousel.css
@@ -57,7 +57,7 @@
 
 .touchcarousel .touchcarousel-item {
 	/* use margin-right for spacing between items */
-	margin-right: 3px;
+	margin: 0 0 0 0;
 	padding: 0;	
 	float: left;		
 }
@@ -67,16 +67,7 @@
 	margin-right: 0 !important;		
 }
 
-.touchcarousel .touchcarousel-item a {opacity: 1;}
 
-.touchcarousel .touchcarousel-item a:hover {
-	-webkit-transition: opacity 0.2s ease-out; 
-	-moz-transition: opacity 0.2s ease-out;
-	transition: opacity 0.2s ease-out;
-	-webkit-perspective: 1000;
-	-webkit-backface-visibility: hidden;
-	opacity: .7;
-}
 
 
 
@@ -107,8 +98,8 @@
 .touchcarousel .arrow-icon{		
 	width: 45px;
 	height: 90px;
-	top:50%;	
-	margin-top:-15px;
+	top:50%;
+	margin-top:-45px;	
 	position: absolute;	
 	cursor: pointer;	
 }
@@ -168,9 +159,11 @@
 \******************************************************/
 .touchcarousel .scrollbar-holder {
 	position: absolute;
-	z-index: 30;	
-	top: -10px;
-	height:2px;
+	z-index: 30;
+	left: 6px;
+	right: 6px;	
+	bottom: 5px;
+	height:4px;
 	overflow: hidden;
 }
 .touchcarousel .scrollbar {
@@ -180,23 +173,13 @@
 	bottom: 0px;
 }
 .touchcarousel .scrollbar.dark {
-	background-color: #000942;	
+	background-color: rgb(130, 130, 130);	
+	background-color: rgba(0, 0, 0, 0.5);
 }
 .touchcarousel .scrollbar.light {
-	background-color: #10194a;	
+	background-color: rgb(210, 210, 210);	
+	background-color: rgba(255, 255, 255, 0.5);	
 }
-
-/*#carousel-image-and-text .scrollbar-holder {
-	background: #000942;
-	bottom: 0;
-	height: 2px;
-	left: 0;
-	right: 0;
-}
-#carousel-image-and-text .scrollbar {
-	background-color: #10194a !important;
-	bottom: 0;
-}*/
 
 
 
@@ -209,8 +192,8 @@
 \******************************************************/
 
 /* IE and Opera use "move", FF uses -moz-grab */
-.touchcarousel .grab-cursor{ cursor:url(images/grab.png) 8 8, move; }
-.touchcarousel .grabbing-cursor{ cursor:url(images/grabbing.png) 8 8, move; }
+.touchcarousel .grab-cursor{ cursor:url(grab.png) 8 8, move; }
+.touchcarousel .grabbing-cursor{ cursor:url(grabbing.png) 8 8, move; }
 
 /* Cursor that used when mouse drag is disabled */
 .touchcarousel .auto-cursor{ cursor:auto; }
@@ -218,125 +201,4 @@
 
 
 
-/*******
-*
-*
-*
-********/
-
-
-/**
-* Carousel with image and text, custom skinned scrollbar
-**/
-#carousel-image-and-text {
-	width: 100%;
-	height: 80px;
-	margin: 0 auto;	
-}	
-#carousel-image-and-text .arrow-holder {
-	height: 62px;
-}		
-#carousel-image-and-text .touchcarousel-item {	
-	height: 200px;		
-}
-#carousel-image-and-text .item-block {
-	width: 100px;
-	height: 67px;
-	display: block;
-}
-#carousel-image-and-text .item-block img,
-#carousel-image-and-text .item-block h4, 
-#carousel-image-and-text .item-block p {
-	float: left;
-	position: relative;
-	display: block;
-	margin: 0;			
-}
-#carousel-image-and-text .item-block img {
-	max-width: 100px;		
-	border: 0;
-	padding: 0;		
-}
-#carousel-image-and-text .item-block {			
-	text-decoration: none;
-	color: inherit;			
-}					
-#carousel-image-and-text .item-block h4 {
-	font: bold 13px/20px Helvetica, Arial, sans-serif;
-	color: #BFC1CB;
-	width: 100px;
-	height: auto;		
-	padding: 2px 0 0 0px;
-	text-align:center;
-	-webkit-transition: color 0.2s ease-out; 
-	-moz-transition: color 0.2s ease-out;
-	transition: color 0.2s ease-out;  	
-}
-#carousel-image-and-text .item-block:hover h4 {	
-	color: #1873c9;		
-}
-#carousel-image-and-text .item-block p {			
-	font: normal 13px/20px Helvetica, Arial, sans-serif;
-	color: #555;		
-	width: 100px;
-	padding: 0;
-	text-align:center;
-}
-
-
-/* SUB CAROUSEL */
-
-#subcarousel {
-	width: 100%;
-	height: 279px;
-	margin: 0 auto;	
-}	
-#subcarousel .arrow-holder {
-	height: 222px;
-}		
-#subcarousel .touchcarousel-item {	
-	height: 200px;		
-}
-#subcarousel .item-block {
-	width: 300px;
-	height: 67px;
-	display: block;
-}
-#subcarousel .item-block img,
-#subcarousel .item-block h4, 
-#subcarousel .item-block p {
-	float: left;
-	position: relative;
-	display: block;
-	margin: 0;			
-}
-#subcarousel .item-block img {
-	max-width: 300px;		
-	border: 0;
-	padding: 0;		
-}
-#subcarousel .item-block {			
-	text-decoration: none;
-	color: inherit;			
-}					
-#subcarousel .item-block h4 {
-	font: bold 13px/20px Helvetica, Arial, sans-serif;
-	color: #BFC1CB;
-	width: 300px;
-	height: auto;		
-	padding: 2px 0 0 0px;
-	text-align:center;
-	-webkit-transition: color 0.2s ease-out; 
-	-moz-transition: color 0.2s ease-out;
-	transition: color 0.2s ease-out;  	
-}
-#subcarousel .item-block:hover h4 {	
-	color: #1873c9;		
-}
-#subcarousel .item-block p {			
-	font: normal 13px/20px Helvetica, Arial, sans-serif;
-	color: #555;		
-	width: 300px;
-	padding: 0;
-	text-align:center;
-}
+/* Copyright 2011, Dmitry Semenov, http://dimsemenov.com */
