--- a/themes/thomasbarham/theme.css
+++ b/themes/thomasbarham/theme.css
@@ -38,8 +38,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'ArialBlackRegular', Gadget, sans-serif;
-	font-weight: normal;
+	font-family: Arial, Gadget, sans-serif;
+	font-weight: bold;
 	color:#fff;
 }
 
@@ -64,7 +64,8 @@ a:hover,a:active {
 
 p {
 	font-family: Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-size: 0.875em;
+	line-height:1.5em;
 	margin:12px 0;
 	color:#fff;
 }
@@ -90,7 +91,7 @@ html, body {
 }
 
 body {
-	font-family: 'ArialBlackRegular', Gadget, sans-serif;
+	font-family: Arial, Gadget, sans-serif;
 	background: #000312;
 	color: #fff;
 	padding: 0;
@@ -113,14 +114,14 @@ body {
 .container {
 	color:#000;
 	padding:0;
-	max-width:1140px;
+	width:1140px;
 	margin:0 auto;
 
 }
 	#header .container {
 		padding-top: 5px;
 		padding-bottom: 190px;
-		max-width:1140px;
+		width:1140px;
 		margin: 0 auto;
 	}
 			#logo,
@@ -141,9 +142,10 @@ body {
 				padding: 0;
 			}
 	#nav-primary {
-		width: 100%;
+		width: 1140px;
 		position: absolute;
 		z-index: 1004;
+		font-family: 'ArialBlackRegular', Gadget, sans-serif;
 	}
 		#nav-primary ul,
 		#nav-primary li {
@@ -224,7 +226,7 @@ Carousels
 /* MAIN CAROUSEL */
 
 .touchcarousel .arrow-icon {
-	top: 60%;
+	top: 50%;
 }
 
 .touchcarousel {
@@ -245,7 +247,7 @@ Carousels
 	margin-left: -46px;
 }
 
-.carousel_container h3 { margin-bottom: 20px; }
+.carousel_container h3 { margin-bottom: 14px; float:left; }
 
 .carousel_container p { text-align:right;}
 
